# Imagined-System-Design-Architecture

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: ProjectManager.cpp  ProjectManager.hpp  ResourceAllocator.cpp  ResourceAllocator.hpp  TalentManager.cpp  TalentManager.hpp
